# movie_rating_system

./: README.md
movie_rating_system/: .env.example  docker-compose.yml  dockerfile  pyproject.toml
movie_rating_system/alembic/: env.py
movie_rating_system/alembic/versions/: 20251222_232924_create_tables.py  9b987b5e1a3d_merge_multiple_heads.py  ada54c31500b_create_tables.py  b5a7984b2776_create_tables.py
movie_rating_system/app/: main.py
movie_rating_system/app/controllers/: movie_controller.py  rating_controller.py
movie_rating_system/app/core/: logging_config.py
movie_rating_system/app/db/: database.py  session.py
movie_rating_system/app/models/: director.py  genre.py  movie.py  rating.py
movie_rating_system/app/repositories/: director_repository.py  genre_repository.py  movie_repository.py  rating_repository.py
movie_rating_system/app/schemas/: movie_schema.py  rating_schema.py
movie_rating_system/app/scripts/: seed_check.py  seeddb.sql
movie_rating_system/app/services/: movie_service.py  rating_service.py
